[gd_scene load_steps=8 format=2]

[ext_resource path="res://CubeDude-Kickabout-Assets/GFX/Interface/bannerHanging.png" type="Texture" id=1]
[ext_resource path="res://CubeDude-Kickabout-Assets/Fonts/Kenney Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://CubeDude-Kickabout-Assets/GFX/Interface/panel_woodPaperDetail.png" type="Texture" id=3]
[ext_resource path="res://Scenes/ButtonStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://Scenes/GUI.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = ExtResource( 4 )
Button/styles/focus = ExtResource( 4 )
Button/styles/hover = ExtResource( 4 )
Button/styles/normal = ExtResource( 4 )
Button/styles/pressed = ExtResource( 4 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="NinePatchRect" type="NinePatchRect" parent="GUI"]
anchor_right = 1.0
margin_bottom = 86.0
texture = ExtResource( 1 )
patch_margin_left = 50
patch_margin_top = 20
patch_margin_right = 50
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playe1Score" type="CenterContainer" parent="GUI/NinePatchRect/HBoxContainer"]
margin_right = 233.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GUI/NinePatchRect/HBoxContainer/Playe1Score"]
margin_left = 98.0
margin_top = 16.0
margin_right = 134.0
margin_bottom = 70.0
text = "0"
align = 1
valign = 1

[node name="Title" type="CenterContainer" parent="GUI/NinePatchRect/HBoxContainer"]
margin_left = 237.0
margin_right = 786.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GUI/NinePatchRect/HBoxContainer/Title"]
margin_top = 16.0
margin_right = 549.0
margin_bottom = 70.0
text = "CubeDude Kickout!"
align = 1
valign = 1

[node name="Playe2Score" type="CenterContainer" parent="GUI/NinePatchRect/HBoxContainer"]
margin_left = 790.0
margin_right = 1024.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GUI/NinePatchRect/HBoxContainer/Playe2Score"]
margin_left = 99.0
margin_top = 16.0
margin_right = 135.0
margin_bottom = 70.0
text = "0"
align = 1
valign = 1

[node name="Popup" type="Popup" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GUI/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GUI/Popup/CenterContainer"]
margin_left = 337.0
margin_top = 175.0
margin_right = 687.0
margin_bottom = 425.0
rect_min_size = Vector2( 350, 250 )
texture = ExtResource( 3 )
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Popup/CenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Popup/CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 51.0
margin_right = 320.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GameOver"
align = 1

[node name="Button" type="Button" parent="GUI/Popup/CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 109.0
margin_right = 320.0
margin_bottom = 169.0
custom_colors/font_color_disabled = Color( 0.509804, 0.466667, 0.466667, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.231373, 0.231373, 1 )
custom_colors/font_color_pressed = Color( 1, 0.443137, 0.443137, 0.709804 )
text = "PlayAgain"
[connection signal="pressed" from="GUI/Popup/CenterContainer/NinePatchRect/VBoxContainer/Button" to="." method="_on_Button_pressed"]
